# mango

./: .gitignore  Cargo.toml  LICENSE  README.md  USER_MANUAL.md  dist-workspace.toml
.github/workflows/: release.yml
src/: cli.rs  db.rs  handlers.rs  main.rs  models.rs  tests.rs  utils.rs
