[package]
name = "mango"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/JulianLobos/mango.git"
description = "Personal Finance Assistant on the Command Line"
homepage = "https://github.com/JulianLobos/mango"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
comfy-table = "7.1"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

